--- a/TT/static/riot/comment.html
+++ b/TT/static/riot/comment.html
@@ -21,12 +21,17 @@
         </div>
     </div>
     <div class="ui divider"></div>
-    <div class="row">
+    <div class="row content">
         <div class="ui content comment-text">
             { opts.cmt.text }
         </div>
     </div>
     <comment class="ui grid reply" each="{ reply in opts.cmt.replies }" cmt="{ reply }"></comment>
+    <div if={ !opts.cmt.parent } class="ui form">
+        <div class="field">
+            <input type="text" name="reply" placeholder="Write a reply...">
+        </div>
+    </div>
     <style>
         comment {
             min-height: 60px;
@@ -38,8 +43,9 @@
         }
 
         .reply {
-            border-left: solid #dddddd;
-            border-radius: 1px !important;
+            margin: 15px !important;
+            background: #eeeeee;
+            border-radius: 4px !important;
             padding-top: 0 !important;
             padding-bottom: 0 !important;
         }
@@ -66,6 +72,7 @@
             display: flex !important;
             flex-direction: column;
             justify-content: space-between;
+            text-align: start;
         }
 
         .comment-date {
@@ -74,8 +81,13 @@
         }
 
         .comment-text {
-            background: white;
-            font-size: 2.0em;
+//            background: white;
+            font-size: 1.3em;
+        }
+
+        .row.content {
+            display: flex;
+            justify-content: start !important;
         }
     </style>
 
