--- a/TT/static/riot/comment_section.html
+++ b/TT/static/riot/comment_section.html
@@ -19,12 +19,33 @@
                 dataType: 'json',
             }).done(function (data) {
                 comsec.comments = data
+                print(data)
                 comsec.update()
                 if (scroll) {
                     $('html,body').animate({scrollTop: document.body.scrollHeight}, 350);
                 }
             })
         }
+
+        function delete_comment(pk, csrf_token) {
+            $.ajax({
+                type: 'DELETE',
+                url: '/api/v1/comments/' + pk,
+                data: JSON.stringify(null),
+                contentType: 'application/json',
+                dataType: 'json',
+                headers: {
+                    'X-CSRFToken': csrf_token,
+                },
+            })
+                .done(function (data) {
+                    TT.events.trigger('comment_posted', null)
+                })
+                .fail(function (data) {
+                    print('comment post error:', data)
+                })
+        }
+
 
         comsec.post_comment = function (text, author_pk, article_pk) {
             let post_data = {
@@ -54,29 +75,42 @@
                 })
         }
 
-        function text_area_behavior(el) {
+        function text_area_behavior(el, disabled) {
             el.keydown(function (e) {
-                if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey) {
-                    $(this).val(function (i, val) {
-                        let pos = e.target.selectionStart
-                        let spliced_string = val.slice(0, pos) + '\n' + val.slice(pos)
-                        return spliced_string
-                    })
-                } else if (e.keyCode === 13 && !e.ctrlKey) {
-                    e.preventDefault()
-                    let text = $(this).val()
-                    comsec.post_comment(text)
+                if (disabled) {
                     $(this).val(function (i, val) {
                         return ''
                     })
-                    $(this).blur()
+                } else {
+                    if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey) {
+                        $(this).val(function (i, val) {
+                            let pos = e.target.selectionStart
+                            let spliced_string = val.slice(0, pos) + '\n' + val.slice(pos)
+                            return spliced_string
+                        })
+                    } else if (e.keyCode === 13 && !e.ctrlKey) {
+                        e.preventDefault()
+                        let text = $(this).val()
+                        comsec.post_comment(text)
+                        $(this).val(function (i, val) {
+                            return ''
+                        })
+                        $(this).blur()
+                    }
                 }
             })
         }
         comsec.on('mount', function () {
             print('comment section opts', opts)
             let comment_input = $(comsec.refs.comment_textarea)
-            text_area_behavior(comment_input, comsec.opts.author_id, comsec.opts.article_id)
+            if (comsec.opts.author_id == 'None') {
+                text_area_behavior(comment_input, true)
+                comment_input.on('click', function (e){
+                    $('#login_menu').click()
+                })
+            } else {
+                text_area_behavior(comment_input, false)
+            }
             get_comments(false)
         })
 
@@ -84,11 +118,21 @@
             print('comment posted from comment-section')
             get_comments(true)
         })
+
+        TT.events.on('comment_delete', function (pk) {
+            $('.ui.basic.modal')
+                .modal({
+                    onApprove: function () {
+                        delete_comment(pk, opts.csrf)
+                    }
+                })
+                .modal('show')
+        })
     </script>
     <style>
         comment-section {
             background: #21324d;
-            min-height: 700px;
+            min-height: 400px;
         }
 
         .outer-comment {
@@ -98,8 +142,8 @@
         }
 
         .commentform {
-            width: 90%;
-            margin-top: 50px;
+            width: 70%;
+            margin: 50px auto 50px auto;
         }
     </style>
 </comment-section>
