--- a/TT/static/riot/perlin.html
+++ b/TT/static/riot/perlin.html
@@ -55,7 +55,7 @@
             })
             const plane = new THREE.Mesh(plane_geo, teal)
 
-            const grid = create_gradient_grid3D(10,10,10,true)
+            const perlin = new Perlin(3, 1, 1)
 
 
             function perlin_vertices3D(geometry, z) {
@@ -63,15 +63,13 @@
                 let scale = 2
                 let length = geometry.vertices.length
                 for(let i = 0; i < length; i++) {
-                    geometry.vertices[i].z = magnitude * perlin3D(geometry.vertices[i].x * scale, geometry.vertices[i].y * scale, z, grid)
-                    //geometry.vertices[i].z = 0.15 * Math.random()
+                    geometry.vertices[i].z = magnitude * perlin.get_value(geometry.vertices[i].x * scale, geometry.vertices[i].y * scale, z)
                 }
                 geometry.verticesNeedUpdate = true
             }
 
             perlin_vertices3D(plane.geometry, 0)
 
-//            plane.rotation.x = -Math.PI / 2.3
             plane.rotation.x = -Math.PI / 3.0
             plane.rotation.z = -Math.PI * 0.12
 
